src/sass/_header.scss
.header {
    position: relative;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
            url(../images/header-main.jpg);


    @include mq(retina){
        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
                url(../images/header-main@2x.jpg);
    }

    @include mq(mobile-only){
        
        
            background-repeat: no-repeat;
            background-position: center;
            background-size: 100% 100%;
            padding: 40px 0px 90px 0px;
    }
    
    
    
    @include mq(tablet-only){
        background-size: 100% 100%;
        padding: 40px 0px 80px 0px;
    }
    
    @include mq (desktop){
        background-size: 100% 100%;
        padding: 40px 0px 80px 0px;
    }

    
    
    // background-size: cover;

    &__library {
        background: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
            url(../images/header-lib.jpg);

        @include mq(retina) {
                background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
                    url(../images/header-lib@2x.jpg);
            }

        @include mq(mobile-only) {
        
        
                background-repeat: no-repeat;
                background-position: center;
                background-size: 100% 100%;
                padding: 40px 0px 60px 0px;
            }
        
        
        
            @include mq(tablet-only) {
                background-size: 100% 100%;
                padding: 40px 0px 60px 0px;
            }
        
            @include mq (desktop) {
                background-size: 100% 100%;
                padding: 40px 0px 60px 0px;
            }
    }

}

.logo__header {
    display: flex;
    align-items: baseline;
}

.logo__header-icon {
    margin-right: 10px;
}

.logo__header--text {
    display: none;
    font-size: 30px;
    font-weight: 500;
    color: #fff;
    letter-spacing: 5px;
    cursor: pointer;
    transition: 0.5s;
    
        &:hover {
            fill: #fff;
            text-shadow: 0 0 5px $accent-orange,
                0 0 25px $accent-orange,
                0 0 50px $accent-orange,
                0 0 100px $accent-orange;
        }

    @include mq(tablet-only){
        display: block;
        
    }
        @include mq (desktop){
            display: block;
        }
}


.navigation {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 500;
    font-size: 12px;
    line-height: 14px;

    margin-left: auto;

    &__list {
        display: flex;
        align-items: baseline;
    }

    &__item:not(:last-child) {
        margin-right: 40px;
    }

    &__button--home,
    &__button--library {
        background-color: transparent;
        color: $main-white-color;
        padding: 20px 0px;
        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
        border: none;

        &:hover {
            color: $accent-red;
        }
    }
}

.navigation__button--current {
    position: relative;

    &::after {
        content: ' ';
        position: absolute;
        animation-name: Move;
        animation-duration: 1000ms;
        width: 100%;
        height: 4px;
        background-color: $accent-red;
        bottom: 15px;
        right: 0px;
        border-radius: 2px;
    }
}

.search__form {
    
    display: flex;
    justify-content: center;
    position: relative;

    @include mq(mobile-only){
        width: 100%;
    }
        @include mq(tablet-only){
            width: 336px;;
        }
                @include mq (desktop) {
                    width: 394px;;
                }

}

.search__form--input {
    width: 100%;
    padding-left: 3px;
    padding-right: 22px;
    background-color: transparent;
    border: none;
    border-bottom: 0.5px solid $main-white-color;
    color: $main-white-color;


    &:focus {
        border: none;
        outline: none;
        border-bottom: 1px solid $accent-red;
    }

    &::placeholder {
        color: $main-white-color;
        font-size: 14px;
        line-height: 1.14;
    }
}

.search__form--button {
    position: absolute;

    background-repeat: no-repeat;
    background-position: center;
    border: none;
    padding: 0px;
    cursor: pointer;

    bottom: 2px;
    right: 0;
    background-color: transparent;
    transform: scale(1);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);

    &:hover,
    &:focus {
        transform: scale(1.2);
    }
}

.form-header {
    display: flex;
    justify-content: center;
    margin-top: 60px;
    // flex-direction: column;
}

// .form-header__container {
//     display: flex;
//     justify-content: center;
// }

.warning-message {
    position: absolute;
    bottom: 45px;
    margin-top: 20px;
    padding: 0 10px;
    color: $accent-red;
    font-weight: 400;
    font-size: 14px;
}

.warning-message.is-hidden {
    opacity: 0;
}

// library

.btn__library {
    font-weight: 500;
    font-size: 12px;
    display: flex;
    align-items: center;
    text-align: center;
    justify-content: center;
    text-transform: uppercase;
    color: $main-white-color;
    background-color: transparent;
    padding: 13px 36px;
    border: 1px solid $main-white-color;
    border-radius: 5px;
    
    height: 44px;
    cursor: pointer;

    @include mq(mobile-only){
        width: 130px;
        &:not(:last-child) {
                margin-right: 20px;
            }
    }

    @include mq(tablet-only){
        width: 152px;
        
            &:not(:last-child) {
                margin-right: 32px;
            }
    }

    @include mq (desktop){
        width: 148px;
        
            &:not(:last-child) {
                margin-right: 16px;
            }
    }

    

    &:hover {
        border: 1px solid $accent-orange;
    }

    &:active {
        border: 1px solid $accent-red;
        color: $accent-red;
    }
}

.btn__library--current {
    background: #FF6B01;
    box-shadow: 0px 8px 43px rgba(255, 107, 1, 0.6);
    border: 1px solid $accent-orange;
}

.btn__container {
    display: flex;
    justify-content: center;
    margin-top: 60px;
}


// MODAL SIGN IN

.backdrop {
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.2);
    width: 100%;
    height: 100%;

    opacity: 1;
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
    overflow-y: scroll;
}

.backdrop.is-hidden {
    opacity: 0;
    pointer-events: none;
}

.backdrop.is-hidden .modal__header {
    transform: translate(-50%, -50%) scale(0.9);
}

.modal__header {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(1);



    background-color: $main-white-color;
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
        0px 1px 1px rgba(0, 0, 0, 0.14),
        0px 2px 1px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
    padding: 40px;

    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);

    @media screen and (min-width:480px) {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%) scale(1);
        min-width: 450px;
        min-height: 609px;
    }

    @media screen and (min-width:1200px) {
        min-width: 528px;
        min-height: 581px;
    }
}

.btn-modal {
    position: absolute;
    top: 8px;
    right: 8px;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    border: 1px solid rgba(0, 0, 0, 0.1);
    background-color: $main-white-color;
    cursor: pointer;

    background-repeat: no-repeat;
    background-position: center;
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);

    &:hover {
        fill: $accent-red;
        border: 1px solid $accent-red;
    }
}

.btn-icon {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%)
}

.icon-enter {
    fill: $main-white-color;
    position: relative;
    bottom: -5px;
    left: -5px;
}

.sign-in {
    background-color: transparent;
    color: $main-white-color;
    text-transform: uppercase;
    font-size: 12px;
    font-weight: 500;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    border: none;
    cursor: pointer;
    justify-content: center;
    text-align: center;
    
    &:hover {
            color: $accent-red;
            fill: $accent-red;
        }
}

.wrapper {
    overflow: hidden;
    max-width: 100%;
    background: #fff;
    padding: 10px;
    border-radius: 5px;
    // box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
}

.wrapper .title-text {
    display: flex;
    width: 200%;
}

.wrapper .title {
    width: 50%;
    font-size: 35px;
    font-weight: 600;
    text-align: center;
    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
}

.wrapper .slide-controls {
    position: relative;
    display: flex;
    height: 50px;
    width: 99%;
    overflow: hidden;
    margin: 30px 0 10px 0;
    justify-content: space-between;
    border: 1px solid lightgrey;
    border-radius: 5px;
}

.slide-controls .slide {
    height: 100%;
    width: 100%;
    color: #fff;
    font-size: 18px;
    font-weight: 500;
    text-align: center;
    line-height: 48px;
    cursor: pointer;
    z-index: 1;
    transition: all 0.6s ease;
}

.slide-controls label.signup {
    color: #000;
}

.slide-controls .slider-tab {
    position: absolute;
    height: 100%;
    width: 50%;
    left: 0;
    z-index: 0;
    border-radius: 5px;
    background: $accent-red;
    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
}

input[type="radio"] {
    display: none;
}

#signup:checked~.slider-tab {
    left: 50%;
}

#signup:checked~label.signup {
    color: #fff;
    cursor: default;
    user-select: none;
}

#signup:checked~label.login {
    color: #000;
}

#login:checked~label.signup {
    color: #000;
}

#login:checked~label.login {
    cursor: default;
    user-select: none;
}

.wrapper .form-container {
    width: 100%;
    overflow: hidden;
}

.form-container .form-inner {
    display: flex;
    width: 200%;
}

.form-container .form-inner form {
    width: 50%;
    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
}

.form-inner form .field {
    height: 50px;
    width: 100%;
    margin-top: 20px;
}

.form-inner form .field input {
    height: 100%;
    width: 95%;
    outline: none;
    padding-left: 15px;
    border-radius: 5px;
    border: 1px solid lightgrey;
    border-bottom-width: 2px;
    font-size: 17px;
    transition: all 0.3s ease;
}

.form-inner form .field input:focus {
    border-color: $accent-red;
    /* box-shadow: inset 0 0 3px #fb6aae; */
}

.form-inner form .field input::placeholder {
    color: #E5E5E5;
    transition: all 0.3s ease;
}

form .field input:focus::placeholder {
    color: #FF6B08;
}

.form-inner form .pass-link {
    margin-top: 15px;
}

.form-inner form .signup-link {
    text-align: center;
    margin-top: 30px;
}

.form-inner form .pass-link a,
.form-inner form .signup-link a {
    color: $accent-red;
    text-decoration: none;
}

.form-inner form .pass-link a:hover,
.form-inner form .signup-link a:hover {
    text-decoration: underline;
}

.btn__autorisation {
    height: 50px;
    width: 99%;
    border-radius: 5px;
    position: relative;
    overflow: hidden;
    background: $accent-red;
    border-radius: 5px;
    transition: all 0.4s ease;
    border: none;
    color: $main-white-color;
    font-size: 20px;
    font-weight: 500;
    cursor: pointer;
}

.login-btn {
    margin-top: 15px;
}

.social-container {
    display: flex;
    justify-content: center;
    margin: 20px 0;
}

.social-container a {
    border: 1px solid #ddd;
    border-radius: 50%;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    margin: 0 5px;
    height: 40px;
    width: 40px;
    color: #333;
    text-decoration: none;
}

